Update README with installation instructions
Added installation instructions for JDK, JavaFX, and MySQL.